--- a/index.html
+++ b/index.html
@@ -21,103 +21,110 @@
   --shadow:0 10px 30px rgba(0,0,0,.08);
   --radius:16px;
 }
-*{box-sizing:border-box}
+*,
+*::before,
+*::after{box-sizing:border-box}
 html,body{height:100%}
 html{scroll-behavior:smooth}
+img,svg,video,canvas{max-width:100%;height:auto}
+img{display:block}
 body{
   margin:0;
   font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
   color:var(--text);
   background:radial-gradient(1200px 800px at 80% -10%, #fff 20%, var(--bg) 60%), var(--bg);
   line-height:1.6;
+  overflow-x:hidden;
 }
 h1,h2,h3,h4{
   font-family:"Playfair Display",serif;
   color:#161616;
   letter-spacing:.2px;
 }
-h1{font-size:clamp(2.4rem,4.4vw,4rem);line-height:1.1}
-h2{font-size:clamp(1.8rem,2.8vw,2.4rem);line-height:1.2;margin:0 0 .6rem}
+h1{font-size:clamp(2.2rem,4.2vw,3.6rem);line-height:1.15;margin:0 0 .6rem}
+h2{font-size:clamp(1.8rem,2.8vw,2.4rem);line-height:1.25;margin:0 0 .6rem}
 h3{font-size:clamp(1.2rem,1.8vw,1.4rem);margin:.2rem 0 .4rem}
 p{margin:.2rem 0 1rem}
 a{color:inherit;text-decoration:none}
 a.button{
-  display:inline-flex;align-items:center;gap:.6rem;border-radius:999px;padding:.9rem 1.2rem;font-weight:600;
-  background:var(--text);color:#fff;box-shadow:var(--shadow);border:1px solid #0000;
+  display:inline-flex;align-items:center;gap:.6rem;border-radius:999px;padding:.9rem 1.1rem;font-weight:600;
+  background:var(--text);color:#fff;box-shadow:var(--shadow);border:1px solid #0000;white-space:nowrap
 }
 a.button:hover{transform:translateY(-1px);transition:transform .2s ease}
 a.button.alt{background:linear-gradient(180deg,#fefefe,#f7f4ee);color:#161616;border-color:var(--line)}
 .container{width:min(1180px,92%);margin:0 auto}
 .grid{display:grid;gap:1.2rem}
 .btn-row{display:flex;flex-wrap:wrap;gap:.8rem}
-.chip{display:inline-flex;align-items:center;gap:.4rem;padding:.4rem .7rem;border-radius:999px;background:#f2efe9;color:#4a4031;font-weight:600;font-size:.85rem}
+.chip{display:inline-flex;align-items:center;gap:.4rem;padding:.4rem .7rem;border-radius:999px;background:#f2efe9;color:#4a4031;font-weight:600;font-size:.85rem;white-space:nowrap}
 .section{padding:clamp(50px,7vw,110px) 0}
-.panel{background:var(--panel);border:1px solid var(--line);border-radius:var(--radius);box-shadow:var(--shadow)}
-hr.sep{border:0;border-top:1px solid var(--line);margin:2rem 0}
+.panel{background:var(--panel);border:1px solid var(--line);border-radius:var(--radius);box-shadow:var(--shadow);padding:1rem}
+hr.sep{border:0;border-top:1px solid var(--line);margin:1rem 0}
 .visually-hidden{position:absolute!important;height:1px;width:1px;overflow:hidden;clip:rect(1px,1px,1px,1px);white-space:nowrap}
 .skip-link{
   position:absolute;left:-999px;top:auto;transition:left .2s;padding:.6rem 1rem;background:#000;color:#fff;border-radius:8px;z-index:9999
 }
 .skip-link:focus{left:1rem;top:1rem}
 header{
-  position:sticky;top:0;z-index:1000;background:rgba(247,246,243,.8);backdrop-filter:saturate(1.2) blur(10px);
+  position:sticky;top:0;z-index:1000;background:rgba(247,246,243,.85);backdrop-filter:saturate(1.2) blur(10px);
   border-bottom:1px solid rgba(0,0,0,.06)
 }
 .navbar{display:flex;align-items:center;justify-content:space-between;padding:.8rem 0;gap:1rem}
-.brand{display:flex;align-items:center;gap:.75rem;font-weight:800;letter-spacing:.5px}
+.brand{display:flex;align-items:center;gap:.75rem;font-weight:800;letter-spacing:.5px;min-width:0}
 .brand .logo{
-  width:42px;height:42px;display:grid;place-items:center;border-radius:12px;background:linear-gradient(160deg,#d8c093,#b88b3b);
-  color:#fff;box-shadow:var(--shadow)
+  min-width:42px;width:42px;height:42px;display:grid;place-items:center;border-radius:12px;background:linear-gradient(160deg,#d8c093,#b88b3b);
+  color:#fff;box-shadow:var(--shadow);font-weight:800
 }
-nav ul{list-style:none;display:flex;gap:1rem;padding:0;margin:0}
-nav a{padding:.6rem .8rem;border-radius:999px}
+nav{position:relative}
+nav ul{list-style:none;display:flex;gap:.5rem;padding:0;margin:0;align-items:center;flex-wrap:wrap}
+nav a{padding:.6rem .8rem;border-radius:999px;display:inline-block}
 nav a:hover, nav a:focus-visible{background:#eee7;outline:none}
-.nav-cta{display:flex;align-items:center;gap:.6rem}
-.mobile-toggle{display:none;border:1px solid var(--line);background:#fff;border-radius:12px;padding:.6rem}
+.nav-cta{display:flex;align-items:center;gap:.6rem;flex-shrink:0}
+.mobile-toggle{display:none;border:1px solid var(--line);background:#fff;border-radius:12px;padding:.6rem .8rem}
 .hero{
-  padding:clamp(70px,10vw,140px) 0 60px;
+  padding:clamp(80px,12vw,160px) 0 70px;
   background:
-    linear-gradient(180deg,rgba(247,246,243,0),rgba(247,246,243,1) 70%),
+    linear-gradient(180deg,rgba(247,246,243,0),rgba(247,246,243,1) 75%),
     url('https://images.unsplash.com/photo-1514890547357-a9ee1c5e3a66?q=80&w=1800&auto=format&fit=crop') center/cover no-repeat;
 }
 .hero .wrap{display:grid;gap:1.2rem;grid-template-columns:1.2fr .8fr;align-items:end}
 .hero .card{
-  padding:1.2rem;border-radius:var(--radius);background:rgba(255,255,255,.8);border:1px solid var(--line);backdrop-filter:blur(6px)
+  padding:1rem;border-radius:var(--radius);background:rgba(255,255,255,.9);border:1px solid var(--line);backdrop-filter:blur(6px)
 }
 .hero .lead{font-size:clamp(1.05rem,1.6vw,1.25rem);color:#373737}
-.kpis{display:grid;grid-template-columns:repeat(4,1fr);gap:1rem;margin-top:1rem}
+.kpis{display:grid;grid-template-columns:repeat(4,1fr);gap:1rem;margin-top:.5rem}
 .kpi{padding:1rem;border:1px solid var(--line);border-radius:14px;background:#fff;text-align:center}
-.kpi strong{display:block;font-size:1.4rem}
+.kpi strong{display:block;font-size:1.3rem}
 .badge{display:inline-flex;align-items:center;gap:.5rem;font-weight:700;font-size:.9rem;background:#141414;color:#fff;padding:.4rem .7rem;border-radius:999px}
 .badge svg{width:18px;height:18px}
-.section.intro .grid{grid-template-columns:1fr 1fr}
+.section.intro .grid{grid-template-columns:1fr 1fr;align-items:start}
 .cards{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem}
-.card{padding:1rem;border:1px solid var(--line);border-radius:16px;background:#fff;display:flex;flex-direction:column;gap:.7rem}
+.card{padding:1rem;border:1px solid var(--line);border-radius:16px;background:#fff;display:flex;flex-direction:column;gap:.7rem;min-width:0}
 .card .thumb{aspect-ratio:16/10;border-radius:12px;background:#f0ece3;overflow:hidden}
 .card .thumb img{width:100%;height:100%;object-fit:cover;display:block}
-.meta{display:flex;align-items:center;gap:.6rem;color:#6b6b6b;font-size:.9rem}
+.meta{display:flex;align-items:center;gap:.6rem;color:#6b6b6b;font-size:.95rem;flex-wrap:wrap}
 .meta .dot{width:6px;height:6px;background:var(--accent);border-radius:2px}
 .tabs{display:flex;flex-wrap:wrap;gap:.6rem;margin-bottom:.8rem}
 .tab{padding:.5rem .9rem;border-radius:999px;border:1px solid var(--line);background:#fff;cursor:pointer}
 .tab.active{background:linear-gradient(180deg,#fff,#f3efe6);border-color:#d8d2c7}
-.visit .info{display:grid;grid-template-columns:1fr 1fr;gap:1rem}
-.visit .map{border:1px solid var(--line);border-radius:16px;overflow:hidden;min-height:320px}
+.visit .info{display:grid;grid-template-columns:1fr 1fr;gap:1rem;align-items:start}
+.visit .map{border:1px solid var(--line);border-radius:16px;overflow:hidden;min-height:360px;background:#fff}
+.visit .map iframe{display:block;width:100%;height:420px;border:0}
 .pricing{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem}
 .price-card{padding:1rem;border:1px solid var(--line);border-radius:16px;background:#fff;display:flex;flex-direction:column;gap:.8rem}
 .price{font-size:2rem;font-weight:800}
 .event-list{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem}
 .event{padding:1rem;border:1px solid var(--line);border-radius:16px;background:#fff;display:grid;gap:.4rem}
 .gallery{display:grid;grid-template-columns:repeat(4,1fr);gap:.6rem}
-.gallery a{display:block;border-radius:12px;overflow:hidden;border:1px solid var(--line)}
+.gallery a{display:block;border-radius:12px;overflow:hidden;border:1px solid var(--line);background:#fff}
 .gallery img{width:100%;height:100%;display:block;object-fit:cover;aspect-ratio:1/1}
-.lightbox{position:fixed;inset:0;background:rgba(0,0,0,.85);display:none;align-items:center;justify-content:center;z-index:2000}
+.lightbox{position:fixed;inset:0;background:rgba(0,0,0,.85);display:none;align-items:center;justify-content:center;z-index:2000;padding:5vh 2vw}
 .lightbox.open{display:flex}
-.lightbox img{max-width:90vw;max-height:85vh;border-radius:12px;box-shadow:0 20px 60px rgba(0,0,0,.4)}
+.lightbox img{max-width:min(100%,1000px);max-height:85vh;border-radius:12px;box-shadow:0 20px 60px rgba(0,0,0,.4)}
 .lightbox .close{position:absolute;top:16px;right:16px;background:#fff;border:1px solid var(--line);border-radius:999px;padding:.5rem .7rem;font-weight:700}
-.columns{display:grid;grid-template-columns:1.1fr .9fr;gap:1rem}
+.columns{display:grid;grid-template-columns:1.1fr .9fr;gap:1rem;align-items:start}
 .steps{display:grid;gap:.7rem}
 .step{display:flex;gap:.7rem;align-items:flex-start}
-.step .n{width:36px;height:36px;border-radius:10px;background:#f0ece3;display:grid;place-items:center;font-weight:700}
+.step .n{width:36px;height:36px;border-radius:10px;background:#f0ece3;display:grid;place-items:center;font-weight:700;flex-shrink:0}
 .shop-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:1rem}
 .shop-item{padding:.8rem;border:1px solid var(--line);border-radius:12px;background:#fff;display:flex;flex-direction:column;gap:.5rem}
 .testimonials{position:relative}
@@ -130,26 +137,32 @@ nav a:hover, nav a:focus-visible{background:#eee7;outline:none}
 .faq details{border:1px solid var(--line);border-radius:12px;background:#fff;padding:.8rem}
 .newsletter{display:grid;grid-template-columns:1fr .9fr;gap:1rem;align-items:center}
 .form-row{display:flex;gap:.6rem;flex-wrap:wrap}
+input,select,textarea,button{
+  font:inherit
+}
 input,select,textarea{
-  width:100%;padding:.8rem .9rem;border:1px solid var(--line);border-radius:12px;background:#fff;font:inherit;outline-offset:2px
+  width:100%;padding:.8rem .9rem;border:1px solid var(--line);border-radius:12px;background:#fff;outline-offset:2px
 }
 textarea{min-height:140px;resize:vertical}
-.form-actions{display:flex;gap:.6rem;align-items:center}
+.form-actions{display:flex;gap:.6rem;align-items:center;flex-wrap:wrap}
 footer{
   background:#111;color:#e8e6e1;border-top:1px solid #000;position:relative
 }
 .footer-top{padding:60px 0}
-.footer-grid{display:grid;grid-template-columns:1.2fr repeat(3,1fr);gap:1.2rem}
+.footer-grid{display:grid;grid-template-columns:1.2fr repeat(3,1fr);gap:1.2rem;align-items:start}
 .footer-grid a{color:#dcdad3}
-.footer-bottom{padding:18px 0;border-top:1px solid rgba(255,255,255,.08);display:flex;align-items:center;justify-content:space-between;font-size:.9rem;color:#bdb9ae}
-.social{display:flex;gap:.6rem}
-.icon{width:20px;height:20px}
+.footer-bottom{padding:18px 0;border-top:1px solid rgba(255,255,255,.08);display:flex;align-items:center;justify-content:space-between;gap:1rem;flex-wrap:wrap;font-size:.95rem;color:#bdb9ae}
+.social{display:flex;gap:.6rem;flex-wrap:wrap}
+.icon{width:20px;height:20px;flex:0 0 auto}
 .stamp{
   position:absolute;right:2%;top:-28px;background:#fff;border:1px solid var(--line);border-radius:12px;padding:.6rem 1rem;box-shadow:var(--shadow);
   display:flex;align-items:center;gap:.5rem;color:#2a2a2a
 }
-.reveal{opacity:0;transform:translateY(12px);transition:opacity .6s ease,transform .6s ease}
+.reveal{opacity:0;transform:translateY(12px);transition:opacity .6s ease,transform .6s ease;will-change:opacity,transform}
 .reveal.visible{opacity:1;transform:translateY(0)}
+@media (max-width:1200px){
+  .footer-grid{grid-template-columns:1fr 1fr 1fr}
+}
 @media (max-width:1024px){
   .hero .wrap{grid-template-columns:1fr}
   .kpis{grid-template-columns:repeat(2,1fr)}
@@ -158,15 +171,28 @@ footer{
   .gallery{grid-template-columns:repeat(3,1fr)}
   .shop-grid{grid-template-columns:repeat(3,1fr)}
   .footer-grid{grid-template-columns:1fr 1fr}
+  .visit .map iframe{height:360px}
+}
+@media (max-width:780px){
+  .hero{padding-top:110px}
 }
 @media (max-width:720px){
-  nav ul{display:none;position:absolute;inset:64px 0 auto 0;padding:1rem;background:#fff;border-bottom:1px solid var(--line);box-shadow:var(--shadow)}
+  nav ul{display:none;position:absolute;left:0;right:0;top:calc(100% + .6rem);padding:1rem;background:#fff;border:1px solid var(--line);box-shadow:var(--shadow);border-radius:12px;margin:0}
   nav ul.open{display:grid;gap:.4rem}
   .mobile-toggle{display:block}
   .nav-cta{display:none}
   .cards,.event-list,.pricing,.news{grid-template-columns:1fr}
   .gallery{grid-template-columns:repeat(2,1fr)}
   .shop-grid{grid-template-columns:repeat(2,1fr)}
+  .kpi{padding:.8rem}
+  .badge{font-size:.85rem}
+  .footer-grid{grid-template-columns:1fr}
+  .visit .map iframe{height:320px}
+}
+@media (prefers-reduced-motion:reduce){
+  *{scroll-behavior:auto!important}
+  .reveal{transition:none}
+  .slides{transition:none}
 }
 </style>
 </head>
@@ -368,7 +394,7 @@ footer{
           <div class="btn-row"><a class="button" href="#tickets"><svg class="icon"><use href="#icon-ticket"/></svg>Buy Tickets</a><a class="button alt" href="#contact"><svg class="icon"><use href="#icon-phone"/></svg>Visitor Help</a></div>
         </div>
         <div class="map panel reveal" aria-label="Map">
-          <iframe title="Willowbrook Museum map" width="100%" height="100%" src="https://maps.google.com/maps?q=New%20York%20Public%20Library&t=k&z=14&ie=UTF8&iwloc=&output=embed" loading="lazy"></iframe>
+          <iframe title="Willowbrook Museum map" src="https://maps.google.com/maps?q=New%20York%20Public%20Library&t=k&z=14&ie=UTF8&iwloc=&output=embed" loading="lazy"></iframe>
         </div>
       </div>
     </div>
@@ -453,7 +479,7 @@ footer{
         <a href="https://images.unsplash.com/photo-1549880338-6a23b0a6b7a5?q=80&w=1600&auto=format&fit=crop"><img alt="Sculpture hall" src="https://images.unsplash.com/photo-1549880338-6a23b0a6b7a5?q=80&w=800&auto=format&fit=crop"></a>
         <a href="https://images.unsplash.com/photo-1520694478166-daaaaec95b69?q=80&w=1600&auto=format&fit=crop"><img alt="Historic gallery" src="https://images.unsplash.com/photo-1520694478166-daaaaec95b69?q=80&w=800&auto=format&fit=crop"></a>
         <a href="https://images.unsplash.com/photo-1470115636492-6d2b56f9146e?q=80&w=1600&auto=format&fit=crop"><img alt="Folk tools display" src="https://images.unsplash.com/photo-1470115636492-6d2b56f9146e?q=80&w=800&auto=format&fit=crop"></a>
-        <a href="https://images.unsplash.com/photo-1510936994138-09c8d7fcd805?q=80&w=1600&auto=format&fit=crop"><img alt="Ceramics on plinths" src="https://images.unsplash.com/photo-1510936994138-09c8d7fcd805?q=80&w=800&auto=format&fit=crop"></a>
+        <a href="https://images.unsplash.com/photo-1510936994138-09c8d7fcd805?q=80&w=1600&auto=format&fit=crop"><img alt="Ceramics on plinths" src="https://images.unsplash.com/photo-1510936994138-09c8d7fcd805?q=80&w=800&auto=format&fit=crop"></img></a>
         <a href="https://images.unsplash.com/photo-1615751072497-e1e0be5d81a1?q=80&w=1600&auto=format&fit=crop"><img alt="Patterned textiles" src="https://images.unsplash.com/photo-1615751072497-e1e0be5d81a1?q=80&w=800&auto=format&fit=crop"></a>
         <a href="https://images.unsplash.com/photo-1518895949257-7621c3c786d7?q=80&w=1600&auto=format&fit=crop"><img alt="Framed drawings" src="https://images.unsplash.com/photo-1518895949257-7621c3c786d7?q=80&w=800&auto=format&fit=crop"></a>
         <a href="https://images.unsplash.com/photo-1530124566582-a618bc2615dc?q=80&w=1600&auto=format&fit=crop"><img alt="Courtyard sculpture" src="https://images.unsplash.com/photo-1530124566582-a618bc2615dc?q=80&w=800&auto=format&fit=crop"></a>
